from pydub import AudioSegment
from pydub.playback import play

class AudioProcessor:
    def add_audio(self, audio_file: str) -> None:
        """
        Adds background music or voiceover to the generated videos.

        Args:
            audio_file (str): The file path of the audio file to add.

        Returns:
            None
        """
        video_audio = AudioSegment.from_file(audio_file)
        # Add audio to the video
        # Implementation goes here
        pass
