from typing import List

class VideoEditor:
    def customize_video(self, style: str, effects: List[str]) -> None:
        """
        Customizes the video with the given style and effects.

        Args:
            style (str): The video style to apply.
            effects (List[str]): The list of effects to apply.

        Returns:
            None
        """
        # Implementation goes here
        pass

    def preview_video(self) -> None:
        """
        Previews the video.

        Returns:
            None
        """
        # Implementation goes here
        pass

    def edit_video(self) -> None:
        """
        Edits the video.

        Returns:
            None
        """
        # Implementation goes here
        pass

    def export_video(self, format: str) -> None:
        """
        Exports the video in the specified format.

        Args:
            format (str): The format to export the video in.

        Returns:
            None
        """
        # Implementation goes here
        pass
