from typing import List

class VideoGenerator:
    def generate_video(self, text: str) -> str:
        """
        Generates a video based on the given text input.

        Args:
            text (str): The input text for generating the video.

        Returns:
            str: The file path of the generated video.
        """
        # Implementation goes here
        pass
